added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,46 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+          <h2>HTML</h2>
+          <ul>
+            <li>The "head" element contains information about the webpage.</li>
+            <li>The "body" element represents the visible content shown to the user.</li>
+            <li>The "style" element defines the CSS styles associated with a website.</li>
+            <li>The "base" element defines the base URL for a webpage.</li>
+            <li>The "link" element connects and external resource to the HTML document.</li>
+            <li>The "meta" element defines the metadata such as the character set, description, keywords, author, and viewpoint.</li>
+            <li>The "section" elements are semantic elements that define a section in a document that contains thematic content.</li>
+            <li>The "head" element is a container for metadata. "meta" elements contain information about the page that is used by the browser. The user won’t see information in the "head" or "meta" elements.</li>
+            <li>The "src" attribute defines the location, or source, of the image file.</li>
+            <li>The "alt" attribute contains a text string that describes the appearance and finctionality of the image.</li>
+          </ul>
+
+        </section>
+        <section class="card" id="css-section">
+          <h2>CSS</h2>
+          <ul>
+            <li>Enter your CSS notes here</li>
+          </ul>
+        </section>
+     
+        <section class="card" id="git-section">
+          <h2>Git</h2>
+          <ul>
+            <li>The "git" command must precede every git statement.</li>
+            <li>The "checkout" command is to move the working branch to a new branch.</li>
+            <li>The "-b" flag creates a new branch.</li>
+            <li>For example: The "feature/starter-code" branch is the name of the new branch that was created for the purpose of adding the starter code to the project. We have added the prefix, feature, to indicate that it is a feature. It is good practice to name the branches for the feature that will be developed by them to help indicate the purpose of each branch.
+            </li>
+          </ul>
+        </section>
+     
+        <section class="card" id="javascript-section">
+          <h2>JavaScript</h2>
+          <ul>
+            <li>Enter your JavaScript notes here</li>
+          </ul>
+        </section>
     </main>
 
     <footer>
